--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ a.list-group-item.active,[class*='-info'] {
 }
 
 .gray-list-group-item.active,[class*='-info'] {
-  background-color: #686868;
-    color:#e5e5ef;
+  background-color: #e5e5ef;
+    color:#686868;
 }
 
 #section1 {
@@ -112,7 +112,10 @@ a.list-group-item.active,[class*='-info'] {
 	background-color: #168ccc;
     color:#686868;
 }
-
+h1.section3 h3.section3 {
+  background-color: #168ccc;
+    color:#ddd;
+}
 #section4 {
 	background-color: #fff;
     color:#444;
