--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ a.list-group-item.active,[class*='-info'] {
 }
 
 .gray-list-group-item.active,[class*='-info'] {
-  background-color: #e5e5ef;
-    color:#686868;
+/*  background-color: #e5e5ef;
+    color:#686868;*/
 }
 
 #section1 {
@@ -368,7 +368,7 @@ footer .nav>li>a:hover {
       </div>
       <div class="row">
         <div class="col-sm-4 col-xs-12">
-              <div class="list-group">
+              <div class="list-group" text-center>
                 <div class="gray-list-group-item active">
                   <h2 class="list-group-item-heading">Floating Launch</h2>
                   <h6>Typically composed of a deck, frame, and floats, they are anchored to the shore. Paddlers launch from the deck, which is supported by the frame, while the floats beneath the frame provide buoyancy</h6>
@@ -415,7 +415,7 @@ footer .nav>li>a:hover {
         </div><!--/middle-->
         
         <div class="col-sm-4 col-xs-12">
-              <div class="list-group text-right">
+              <div class="list-group text-center">
                 <div class="gray-list-group-item active">
                   <h2 class="list-group-item-heading">Modular Floats</h2>
                   <h6>Polyethylene, the most frequently chosen plastic, can function as both frame and float; they may have grooves and brackets that attach easily to shoreline structures or floats may have built-in cleats, which facilitate anchoring</h6>
