--- a/index.html
+++ b/index.html
@@ -114,13 +114,17 @@ a.list-group-item.active,[class*='-info'] {
 }
 h1.section3 h3.section3 {
   background-color: #168ccc;
-    color:#ddd;
+/*    color:#ddd; */
 }
 #section4 {
 	background-color: #fff;
     color:#444;
 }
 
+h1.section5 h3.section5 {
+  background-color: #168ccc;
+    color:#ddd;
+}
 #section5,#section7,#section7 a {
     color:#f5f5f5;
 }
@@ -368,7 +372,7 @@ footer .nav>li>a:hover {
       </div>
       <div class="row">
         <div class="col-sm-4 col-xs-12">
-              <div class="list-group" text-center>
+              <div class="list-group text-center">
                 <div class="gray-list-group-item active">
                   <h2 class="list-group-item-heading">Floating Launch</h2>
                   <h6>Typically composed of a deck, frame, and floats, they are anchored to the shore. Paddlers launch from the deck, which is supported by the frame, while the floats beneath the frame provide buoyancy</h6>
