--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ footer .nav>li>a:hover {
                   <h2 class="list-group-item-heading">Floating Launch</h2>
                   <h6>Typically composed of a deck, frame, and floats, they are anchored to the shore. Paddlers launch from the deck, which is supported by the frame, while the floats beneath the frame provide buoyancy</h6>
                 </div> 
-                <img src="FloatingLaunch.png" alt="Floating Launch">
+                <div><img src="FloatingLaunch.png" alt="Floating Launch"></div>
                 <div class="list-group-item">
                   <p class="list-group-item-text">Would require pilings to be sufficiently high to anchor float in flood tides</p>
                 </div>
