--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ a.list-group-item.active,[class*='-info'] {
 }
 
 .gray-list-group-item.active,[class*='-info'] {
-/*  background-color: #e5e5ef;
-    color:#686868;*/
+  background-color: #e5e5ef;
+    color:#ddd;
 }
 
 #section1 {
@@ -363,13 +363,16 @@ footer .nav>li>a:hover {
 </section>
 
 <section class="container-fluid" id="section3">
-  <div class="container">
+<!--  <div class="container"> -->
   	<h1 class="text-center">Ramp Design</h1>
-      <div class="row">
+          <h3 class="text-center">There are hundreds of possible ramp designs.  The National Park Service defines many in their document - <a href="http://www.nps.gov/ncrc/programs/rtca/helpfultools/launchguide.pdf">Logical Lasting Launches</a></h3>
+
+<!--      <div class="row">
         <div class="col-sm-12">
           <h3 class="text-center">There are hundreds of possible ramp designs.  The National Park Service defines many in their document - <a href="http://www.nps.gov/ncrc/programs/rtca/helpfultools/launchguide.pdf">Logical Lasting Launches</a></h3>
         </div>
       </div>
+-->
       <div class="row">
         <div class="col-sm-4 col-xs-12">
               <div class="list-group text-center">
@@ -440,7 +443,7 @@ footer .nav>li>a:hover {
               </div>
         </div><!--/right-->        
       </div><!--/row-->
-  </div><!--/container--> 
+<!--  </div><!--/container-->
 </section>
 
 <section class="container-fluid" id="section4">
