--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ a.list-group-item.active,[class*='-info'] {
 }
 
 .gray-list-group-item.active,[class*='-info'] {
-  background-color: #e5e5ef;
+  /*background-color: #e5e5ef;*/
     color:#ddd;
 }
 
@@ -110,7 +110,7 @@ a.list-group-item.active,[class*='-info'] {
   
 #section3 {
 	background-color: #168ccc;
-    color:#686868;
+    color:#ddd;
 }
 h1.section3 h3.section3 {
   background-color: #168ccc;
@@ -379,8 +379,12 @@ footer .nav>li>a:hover {
                 <div class="gray-list-group-item active">
                   <h2 class="list-group-item-heading">Floating Launch</h2>
                   <h6>Typically composed of a deck, frame, and floats, they are anchored to the shore. Paddlers launch from the deck, which is supported by the frame, while the floats beneath the frame provide buoyancy</h6>
-                </div> 
-                <div><img src="FloatingLaunch.png" alt="Floating Launch"></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4 col-xs-12">
+                    <img src="FloatingLaunch.png" class="img-responsive" alt="Floating Launch">
+                  </div>
+                </div>
                 <div class="list-group-item">
                   <p class="list-group-item-text">Would require pilings to be sufficiently high to anchor float in flood tides</p>
                 </div>
