--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@ a.list-group-item.active,[class*='-info'] {
 	background-color: #168ccc;
     color:#fff;
 }
-  
+
+.list-group-item {
+  color: #555;
+}
+
 .blue-list-group-item.active,[class*='-info'] {
   background-color: #168ccc;
     color:#fff;
