--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ a.list-group-item.active,[class*='-info'] {
     color:#dedeff;
 }
   
-#section2 {
+#section2 #section5{
 	background-color: #e5e5ef;
     color:#686868;
 }
@@ -384,10 +384,8 @@ footer .nav>li>a:hover {
                   <h2 class="list-group-item-heading">Floating Launch</h2>
                   <h6>Typically composed of a deck, frame, and floats, they are anchored to the shore. Paddlers launch from the deck, which is supported by the frame, while the floats beneath the frame provide buoyancy</h6>
                 </div>
-                <div class="row">
-                  <div class="col-sm-4 col-xs-12">
-                    <img src="FloatingLaunch.png" class="img-responsive" alt="Floating Launch">
-                  </div>
+                <div class="row"> 
+                  <img src="FloatingLaunch.png" class="img-responsive" alt="Floating Launch">
                 </div>
                 <div class="list-group-item">
                   <p class="list-group-item-text">Would require pilings to be sufficiently high to anchor float in flood tides</p>
@@ -410,7 +408,9 @@ footer .nav>li>a:hover {
                   <h2 class="list-group-item-heading">Fixed Ramp</h2>
                   <h6>Concrete ramps may be used as launches by themselves or in combination with floating launches, piers, bridges, dock abutments, bulkheads, and rock cribs</h6>
                 </div>
-                <img src="FixedRamp.png" alt="Fixed Ramp" style="width:304px;height:228px">
+                <div class="row"> 
+                  <img src="FixedRamp.png" class="img-responsive" alt="Floating Launch">
+                </div>
                 <div class="list-group-item">
                   <p class="list-group-item-text">Would require method to increase traction (e.g. V-grooves)</p>
                 </div>
@@ -435,7 +435,9 @@ footer .nav>li>a:hover {
                   <h2 class="list-group-item-heading">Modular Floats</h2>
                   <h6>Polyethylene, the most frequently chosen plastic, can function as both frame and float; they may have grooves and brackets that attach easily to shoreline structures or floats may have built-in cleats, which facilitate anchoring</h6>
                 </div>
-                <img src="ModularFloats.png" alt="Modular Floats" style="width:304px;height:228px">
+                <div class="row"> 
+                  <img src="ModularFloats.png" class="img-responsive" alt="Floating Launch">
+                </div>
                 <div class="list-group-item">
                   <p class="list-group-item-text">Cheaper than other floating methods</p>
                 </div>
@@ -571,7 +573,8 @@ footer .nav>li>a:hover {
         </a>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
-       <i class="fa fa-instagram fa-4x"></i>
+        <a href="http://instagram.com/thehagueboatlaunch/">
+          <i class="fa fa-instagram fa-4x"></i>
       </div>
   </div><!--/row-->
 </section>
