--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@ a.list-group-item.active,[class*='-info'] {
   color: #555;
 }
 
+.picture-above-table {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 .blue-list-group-item.active,[class*='-info'] {
   background-color: #168ccc;
     color:#fff;
@@ -107,8 +112,13 @@ a.list-group-item.active,[class*='-info'] {
     color:#dedeff;
 }
   
-#section2 #section5{
+#section2{
 	background-color: #e5e5ef;
+    color:#686868;
+}
+  
+#section5{
+  background-color: #e5e5ef;
     color:#686868;
 }
   
@@ -385,7 +395,9 @@ footer .nav>li>a:hover {
                   <h6>Typically composed of a deck, frame, and floats, they are anchored to the shore. Paddlers launch from the deck, which is supported by the frame, while the floats beneath the frame provide buoyancy</h6>
                 </div>
                 <div class="row"> 
-                  <img src="FloatingLaunch.png" class="img-responsive" alt="Floating Launch">
+                  <div class="picture-above-table">
+                    <img src="FloatingLaunch.png" class="img-responsive" alt="Floating Launch">
+                  </div>
                 </div>
                 <div class="list-group-item">
                   <p class="list-group-item-text">Would require pilings to be sufficiently high to anchor float in flood tides</p>
