--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@ a.list-group-item.active,[class*='-info'] {
 .picture-above-table {
   margin-left: 0px;
   margin-right: 0px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .blue-list-group-item.active,[class*='-info'] {
@@ -515,6 +517,13 @@ footer .nav>li>a:hover {
 </section>
 
 <section class="container-fluid" id="section5">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+          <h1>Contact</h1>
+      </div>
+    </div>
+  </div>
 	<h1 class="text-center">Contact</h1>
     <div class="row">
       <div class="col-sm-12 col-xs-12">
@@ -575,9 +584,6 @@ footer .nav>li>a:hover {
        	<a href="https://www.facebook.com/TheHagueBoatLaunch">
           <i class="fa fa-facebook fa-4x"></i>
         </a>
-      </div>
-      <div class="col-sm-1 col-xs-4 text-center">
-       <i class="fa fa-google-plus fa-4x"></i>
       </div>
       <div class="col-sm-1 col-xs-4 text-center">
         <a href="https://twitter.com/HagueBoatLaunch">
