--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ a.list-group-item.active,[class*='-info'] {
 }
   
 #section5{
-  background-color: #e5e5ef;
-    color:#686868;
+  background-color: #168ccc;
+    color:#ddd;
 }
   
 #section3 {
@@ -382,13 +382,6 @@ footer .nav>li>a:hover {
 <!--  <div class="container"> -->
   	<h1 class="text-center">Ramp Design</h1>
           <h3 class="text-center">There are hundreds of possible ramp designs.  The National Park Service defines many in their document - <a href="http://www.nps.gov/ncrc/programs/rtca/helpfultools/launchguide.pdf">Logical Lasting Launches</a></h3>
-
-<!--      <div class="row">
-        <div class="col-sm-12">
-          <h3 class="text-center">There are hundreds of possible ramp designs.  The National Park Service defines many in their document - <a href="http://www.nps.gov/ncrc/programs/rtca/helpfultools/launchguide.pdf">Logical Lasting Launches</a></h3>
-        </div>
-      </div>
--->
       <div class="row">
         <div class="col-sm-4 col-xs-12">
               <div class="list-group text-center">
@@ -423,7 +416,9 @@ footer .nav>li>a:hover {
                   <h6>Concrete ramps may be used as launches by themselves or in combination with floating launches, piers, bridges, dock abutments, bulkheads, and rock cribs</h6>
                 </div>
                 <div class="row"> 
-                  <img src="FixedRamp.png" class="img-responsive" alt="Floating Launch">
+                  <div class="picture-above-table">
+                    <img src="FixedRamp.png" class="img-responsive" alt="Floating Launch">
+                  </div>
                 </div>
                 <div class="list-group-item">
                   <p class="list-group-item-text">Would require method to increase traction (e.g. V-grooves)</p>
@@ -450,7 +445,9 @@ footer .nav>li>a:hover {
                   <h6>Polyethylene, the most frequently chosen plastic, can function as both frame and float; they may have grooves and brackets that attach easily to shoreline structures or floats may have built-in cleats, which facilitate anchoring</h6>
                 </div>
                 <div class="row"> 
-                  <img src="ModularFloats.png" class="img-responsive" alt="Floating Launch">
+                  <div class="picture-above-table">
+                    <img src="ModularFloats.png" class="img-responsive" alt="Floating Launch">
+                  </div>
                 </div>
                 <div class="list-group-item">
                   <p class="list-group-item-text">Cheaper than other floating methods</p>
