--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ h1.section5 h3.section5 {
 }
 
 #section6 {
-	background-color: #168ccc;
-    color:#ddd;
+  background-color: #fff;
+    color:#444;
 }
 
 footer {
@@ -525,16 +525,14 @@ footer .nav>li>a:hover {
     <div class="row">
       <div class="col-sm-12 col-xs-12">
         <h2>Email</h2>
-        <p class="lead">TBD.</p>
+        <p class="lead"><a href="mailto:matt@thehagueboatlaunch.com">Email us!</a></p>
       </div>
-        <p class="lead">Ghent residents, in cooperation with the Ghent Neighborhood League, City of Norfolk and other entities, are exploring the feasibility of creating a kayak-style launch in the Hague area to celebrate the joys of our Ghent neighborhood waterway.  This process will include design research and development,  as well as necessary community, city and any other approvals needed... and many steps in-between.  Please join us"</p>
     </div>
     <div class="row">
       <div class="col-sm-12 col-xs-12">
         <h2>Ghent Neighborhood League</h2>
-        <p class="lead">TBD.</p>
+        <p class="lead">Ghent residents, in cooperation with the Ghent Neighborhood League, City of Norfolk and other entities, are exploring the feasibility of creating a kayak-style launch in the Hague area to celebrate the joys of our Ghent neighborhood waterway.  This process will include design research and development,  as well as necessary community, city and any other approvals needed... and many steps in-between.  Please join us.</p>
       </div>
-        <p class="lead">TBD"</p>
     </div>
 </section>
 
@@ -547,7 +545,7 @@ footer .nav>li>a:hover {
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 col-xs-12">
                 <div class="list-group text-center">
-                  <div class="gray-list-group-item active">
+                  <div class="blue-list-group-item active">
                     <h2 class="list-group-item-heading">Norfolk Representatives</h2>
                   </div>
                   <a href="mailto:mayor@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Fraim, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
