--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ footer .nav>li>a:hover {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">The Hague Boat Launch</a>
+      <a class="navbar-brand" href="#">Ghent Kayak Launch</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-left">
