--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ footer .nav>li>a:hover {
 
 <section class="container-fluid" id="section1">
   	<h1 class="text-center v-center">Get on the Water</h1> 
-    <p class="text-center lead">A kayak and small boat launch in Ghent should be:</p> 	
+    <p class="text-center lead">A kayak and small boat launch in Ghent, Norfolk should be:</p> 	
   	<div class="container">
       <div class="row">
           <div class="col-sm-4">
