Update to Analytics Account

--- a/index.html
+++ b/index.html
@@ -477,16 +477,14 @@ footer .nav>li>a:hover {
 
 <section class="container-fluid" id="section6">
   <h1 class="text-center">Get Involved</h1>
-    <h2 class="text-center">Donate</h2>
+<!--    <h2 class="text-center">Donate</h2>
       <p class="text-center lead">Coming soon</p>
+-->
     <h2 class="text-center">Write Your Norfolk Rep</h2>
       <p class="text-center lead">Norfolk City Council's awareness and encouragement in this project will help make the boat launch dream a reality!</p>
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 col-xs-12">
                 <div class="list-group text-center">
-                  <a href="#" class="list-group-item active">
-                    <h2 class="list-group-item-heading">Norfolk Representatives</h2>
-                  </a>
                   <a href="mailto:mayor@norfolk.gov?subject=Boat Launch in The Hague&body=Mr. Fraim, I would to ask you to consider having the City of Norfolk support a project constructing a boat launch in Smith's Creek, The Hague, Norfolk.  I love Norfolk and its idyllic setting on the water and want to be able to fully enjoy all that it has to offer." class="list-group-item">
                     <p class="list-group-item-text">Mayor: Mr. Paul D. Fraim</p>
                   </a>
@@ -636,11 +634,11 @@ $('a[href*=#]:not([href=#])').click(function() {
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-59396592-1', 'auto');
+          ga('create', 'UA-59396592-2', 'auto');
           ga('send', 'pageview');
 
         </script>
-        
+
     </body>
 
 </html>
