--- a/photos.html
+++ b/photos.html
@@ -28,28 +28,31 @@
 
             <ul class="thumbnails">
                 <li class="span3">
-                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/1.jpg"><img class="group1" src="img/pics/1.jpg" title="Image Title" /></a>
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_Aerial.jpg"><img class="group1" src="img/pics/History_Aerial.jpg" title="Image Title" /></a>
                     </li> <!--end thumb -->
                     <li class="span3">
-                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/2.jpg"><img class="group1" src="img/pics/2.jpg" title="Image Title" /></a>
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_AerialBrambletonBridge.jpg"><img class="group1" src="img/pics/History_AerialBrambletonBridge.jpg" title="Image Title" /></a>
                     </li> <!--end thumb -->
                     <li class="span3">
-                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/3.jpg"><img class="group1" src="img/pics/3.jpg" title="Image Title" /></a>
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_AerialPostcard.jpg"><img class="group1" src="img/pics/History_AerialPostcard.jpg" title="Image Title" /></a>
                     </li> <!--end thumb -->
                     <li class="span3">
-                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/4.jpg"><img class="group1" src="img/pics/4.jpg" title="Image Title" /></a>
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_BotetourtBridge.jpg"><img class="group1" src="img/pics/History_BotetourtBridge.jpg" title="Image Title" /></a>
                     </li> <!--end thumb -->
                     <li class="span3">
-                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/5.jpg"><img class="group1" src="img/pics/5.jpg" title="Image Title" /></a>
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_FootbridgeReconstruction.jpg"><img class="group1" src="img/pics/History_FootbridgeReconstruction.jpg" title="Image Title" /></a>
                     </li> <!--end thumb -->
                     <li class="span3">
-                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/6.jpg"><img class="group1" src="img/pics/6.jpg" title="Image Title" /></a>
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_HagueBoats.jpg"><img class="group1" src="img/pics/History_HagueBoats.jpg" title="Image Title" /></a>
                     </li> <!--end thumb -->
                     <li class="span3">
-                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/7.jpg"><img class="group1" src="img/pics/7.jpg" title="Image Title" /></a>
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_HagueBoats2.jpg"><img class="group1" src="img/pics/History_HagueBoats2.jpg" title="Image Title" /></a>
                     </li> <!--end thumb -->
                     <li class="span3">
-                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/8.jpg"><img class="group1" src="img/pics/8.jpg" title="Image Title" /></a>
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_Sailboat.jpg"><img class="group1" src="img/pics/History_Sailboat.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_StoneGarden.jpg"><img class="group1" src="img/pics/History_StoneGarden.jpg" title="Image Title" /></a>
                     </li> <!--end thumb -->
             </ul><!--end thumbnails -->
 
