--- a/photos.html
+++ b/photos.html
@@ -23,7 +23,7 @@
         <!-- This code is taken from http://twitter.github.com/bootstrap/examples/hero.html -->
 
         <div class="container gallery">
-            <h2 class="page-title">Bootstrap Gallery</h2>
+            <h2 class="page-title">The Hague History, In Photos</h2>
 
 
             <ul class="thumbnails">
@@ -54,6 +54,36 @@
                     <li class="span3">
                         <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_StoneGarden.jpg"><img class="group1" src="img/pics/History_StoneGarden.jpg" title="Image Title" /></a>
                     </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_StoneGarden2.jpg"><img class="group1" src="img/pics/History_StoneGarden2.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_HagueBoats3.jpg"><img class="group1" src="img/pics/History_HagueBoats3.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_HagueBoats4.jpg"><img class="group1" src="img/pics/History_HagueBoats4.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_StoneGarden3.jpg"><img class="group1" src="img/pics/History_StoneGarden3.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_StoneGardenReenactment.jpg"><img class="group1" src="img/pics/History_StoneGardenReenactment.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_HagueBoatsIce.jpg"><img class="group1" src="img/pics/History_HagueBoatsIce.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_HagueBoats5.jpg"><img class="group1" src="img/pics/History_HagueBoats5.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_StoneGardenReenactment2.jpg"><img class="group1" src="img/pics/History_StoneGardenReenactment2.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_HagueBoats6.jpg"><img class="group1" src="img/pics/History_HagueBoats6.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->
+                    <li class="span3">
+                        <a class="thumbnail" rel="lightbox[group]" href="img/pics/History_HagueBoats7.jpg"><img class="group1" src="img/pics/History_HagueBoats7.jpg" title="Image Title" /></a>
+                    </li> <!--end thumb -->                    
             </ul><!--end thumbnails -->
 
 
